user-setup (0.04) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Add /usr/share/common-licenses/GPL reference to debian/copyright.

  [ Christian Perrier ]
  * Call commands using [a-z] intervals under a C locale
    Closes: #343636

 -- Christian Perrier <bubulle@debian.org>  Fri, 16 Dec 2005 18:09:05 +0100

user-setup (0.03) unstable; urgency=low

  [ Christian Perrier ]
  * Add the first created user to useful groups (code coming
    from base-config)
  * log all calls to adduser

  [ Colin Watson ]
  * Fix setpassword: perl is already run in the chroot, so there's no need
    to try to chroot again.

  [ Joey Hess ]
  * Add po/output file to ensure utf-8 encoding.

 -- Christian Perrier <bubulle@debian.org>  Sun,  4 Dec 2005 07:11:30 +0100

user-setup (0.02) unstable; urgency=low

  [ Colin Watson ]
  * Fix clearing of encrypted user passwords from the debconf database.
  * Remove a few bits of dead code.
  * Exit with code 10 to back up to main menu, not 30.
  * Use a prebaseconfig script and prompt the user earlier
  * Remove some unnecessary calls to chroot.
  * Simplify state machine so that one fewer line has to be changed when
    adding or removing states.

  [ Christian Perrier ]
  * Add a main menu title
  * Add a template for the prebaseconfig progress bar
  * Removed useless and harmful db_settitle in user-setup

 -- Christian Perrier <bubulle@debian.org>  Sun, 27 Nov 2005 19:59:52 +0100

user-setup (0.01) unstable; urgency=low

  [ Christian Perrier ]
  * First release as a udeb broken out from shadow (and base-config)
    and rewritten.

 -- Christian Perrier <bubulle@debian.org>  Sun, 13 Nov 2005 20:07:32 +0100